maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: '(' expected but identifier found.
      if aBiscuit(i,j){
         ^JediEscaper:16: error: illegal start of simple expression
    }
    ^